        - mark-urls launch-on-click by jepler.
        - removed "small" resource parsing function, as it wasn't really
          compatible, and not really small either.
        - removed PATH_ENV and PATH file search support.
        - removed support for locale-specific app-defaults file.
        - fixed a bug where out-of-bounds colour sequences could lead
          to crashes.
        - XTerm_Color01 sequence returned wrong results in query mode.

6.3  Wed Jan  4 22:37:10 CET 2006
        - SECURITY FIX: on systems using openpty, permissions were
          not correctly updated on the tty device and were left as
          world-readable and world-writable (likely in original rxvt,
          too), and were not restored properly. Affected are only
          systems where non-unix ptys were used (such as most BSDs, not
          GNU/Linux). (found, patched and debugged by Ryan Beasley).
        - meta8 support was forcefully enabled in most configurations.
          restored configurability of this (useless) feature (reported
          by Mikachu).
        - optionally embed a perl interpreter, which can be used for more
          intelligent/customized selection support, visual feedback,
          menus, tabs etc. See the the urxvtperl manpage, the -pe option,
          perl*-resources and keysym resources. Not everything is there yet.
        - try to be more clever about differing font sizes and their ascent.
          Not guarenteed to work, but works better in most cases now.
        - fix directory permissions on install.
        - implemented option to disable built-in line drawing characters
          and fall back to the font ones (patch by Martin Pohlack).
        - disabled sched_yield support: the linux version is just too useless
          (it schedules nice'd processes before the own one for extended
          periods). Too bad, it could reduce system time by a factor of 5 here.

6.2  Mon Jan  2 16:03:01 CET 2006