@@ -1908,8 +1908,8 @@ Set XTerm Parameters. 8-bit ST: 0x9c, 7-bit ST sequence: ESC \ (0x1b,
 <tr><td>Ps = 12</td><td>Change colour of text cursor foreground to Pt</td></tr>
 <tr><td>Ps = 13</td><td>Change colour of mouse foreground to Pt</td></tr>
 <tr><td>Ps = 17</td><td>Change colour of highlight characters to Pt</td></tr>
-<tr><td>Ps = 18</td><td>Change colour of bold characters to Pt</td></tr>
-<tr><td>Ps = 19</td><td>Change colour of underlined characters to Pt</td></tr>
+<tr><td>Ps = 18</td><td>Change colour of bold characters to Pt [deprecated, see 706]</td></tr>
+<tr><td>Ps = 19</td><td>Change colour of underlined characters to Pt [deprecated, see 707]</td></tr>
 <tr><td>Ps = 20</td><td>Change default background to Pt</td></tr>
 <tr><td>Ps = 39</td><td>Change default foreground colour to Pt.</td></tr>
 <tr><td>Ps = 46</td><td>Change Log File to Pt unimplemented</td></tr>
@@ -1920,6 +1920,8 @@ Set XTerm Parameters. 8-bit ST: 0x9c, 7-bit ST sequence: ESC \ (0x1b,
 <tr><td>Ps = 703</td><td>Menubar command Pt (Compile menubar).</td></tr>
 <tr><td>Ps = 704</td><td>Change colour of italic characters to Pt</td></tr>
 <tr><td>Ps = 705</td><td>Change background pixmap tint colour to Pt (Compile transparency).</td></tr>
+<tr><td>Ps = 706</td><td>Change colour of bold characters to Pt</td></tr>
+<tr><td>Ps = 707</td><td>Change colour of underlined characters to Pt</td></tr>
 <tr><td>Ps = 710</td><td>Set normal fontset to Pt. Same as Ps = 50.</td></tr>
 <tr><td>Ps = 711</td><td>Set bold fontset to Pt. Similar to Ps = 50 (Compile styles).</td></tr>
 <tr><td>Ps = 712</td><td>Set italic fontset to Pt. Similar to Ps = 50 (Compile styles).</td></tr>
